Add python to the high level description

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <img src="./images/stickman.png" alt="d" style="margin-left: -80px;" />
                 <p>
                     Hi, I'm Lachlan Mackenzie, a software developer based in Manchester. I'm broadly experienced in many
-                    software fields, but specialise in C++ backend work.
+                    software fields, but specialise in C++ backend work and python.
                 </p>
             </div>
             <br></br>
